--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8">
   <title> Varun Sawhney</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="C:\Users\varun sawhney\Desktop\Web Development\3B. CSS\favicon (1).ico">
+  <link rel="icon" href="favicon (1).ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="C:\Users\varun sawhney\Desktop\Web Development\3B. CSS\Images\cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="\Images\cloud.png" alt="cloud-img">
     <h1><em>I'm Varun</em> </h1>
     <h2> a <span class="Data">Data Scientist </span> </h2>
-    <img class="bottom-cloud" src="C:\Users\varun sawhney\Desktop\Web Development\3B. CSS\Images\cloud.png" alt="cloud-img">
-    <img src="C:\Users\varun sawhney\Desktop\Web Development\3B. CSS\Images\mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="\Images\cloud.png" alt="cloud-img">
+    <img src="Images\mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
-    <img class="middle-Images" src="C:\Users\varun sawhney\Desktop\Web Development\3B. CSS\Images\varun1.jpg" alt="" >
+    <img class="middle-Images" src="varun1.jpg" alt="" >
     <div class="profile">
       <h2>Hello.</h2>
       <p class="intro"> I'm a Data Scientist. I have over 7 years of experience in construction industry. My professional experience includes assignments in project and program management,
