--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="\Images\cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="Images\cloud.png" alt="cloud-img">
     <h1><em>I'm Varun</em> </h1>
     <h2> a <span class="Data">Data Scientist </span> </h2>
-    <img class="bottom-cloud" src="\Images\cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="Images\cloud.png" alt="cloud-img">
     <img src="Images\mountain.png" alt="mountain-img">
   </div>
 
