--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="middle-container">
-    <img class="middle-Images" src="varun1.jpg" alt="" >
+    <img class="middle-Images" src="Images\varun1.jpg" alt="" >
     <div class="profile">
       <h2>Hello.</h2>
       <p class="intro"> I'm a Data Scientist. I have over 7 years of experience in construction industry. My professional experience includes assignments in project and program management,
