--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://varunsawhney8.github.io/web/">Website</a>
     <p>© 2021 Varun Sawhney.</p>
   </div>
 
