--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <hr>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/varun-sawhney-26b7ab99/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/varunsawhney8">GitHub</a>
     <a class="footer-link" href="https://varunsawhney8.github.io/web/">Website</a>
     <p>© 2021 Varun Sawhney.</p>
   </div>
