--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Hello.</h2>
       <p class="intro"> I'm a Data Scientist. I have over 7 years of experience in construction industry. My professional experience includes assignments in project and program management,
         project analysis, planning and end to end project delivery.</p>
-      <img  src="Images\upload.jpg" >
+      <img  src="Images\upload.jpg" width=90% height=auto>
     </div>
     <hr>
     <div class="skills">
