--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you want to Hire me</h3>
+      <h2> Want to Hire me</h2>
+      <h3> Get in Touch</h3>
       <p class="contact-message">My contact details are as follows: <br>Contact Number: +91-9268070584, <br> Email address: varunsawhney8@gmail.com</p>
       <a class="btn" href="mailto:varunsawhney8@gmail.com">CONTACT ME</a>
     </div>
