--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img  src="Images\upload1.jpg" width=90% height=auto>
+        <img  src="Images\upload1.png" width=90% height=auto>
         <img class="skill-row1" src="https://media.giphy.com/media/3osxYc2axjCJNsCXyE/giphy.gif" alt="" >
         <h3>Data Science</h3>
 
