--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="contact-me">
       <h2> Want to Hire me</h2>
       <h3> Get in Touch</h3>
-      <p class="contact-message">My contact details are as follows: <br>Contact Number: +91-9268070584, <br> Email address: varunsawhney8@gmail.com</p>
+      <p class="contact-message">My contact details are as follows: <br>Contact Number: +91-9268070584, <br> Email address: varunsawhney8@outlook.com</p>
       <a class="btn" href="mailto:varunsawhney8@gmail.com">CONTACT ME</a>
     </div>
   </div>
