--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="top-container">
-    <a class="top-link" href="https://varunsawhney8.github.io/web/">Website</a>
+    <h2><a class="top-link" href="https://varunsawhney8.github.io/web/">Website</a></h2>
     <img class="top-cloud" src="Images\cloud.png" alt="cloud-img">
     <h1><em>I'm Varun</em> </h1>
     <h2> a <span class="Data">Data Scientist </span> </h2>
