--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img class="middle-Images" src="Images\varun1.jpg" alt="" >
     <div class="profile">
       <h2>Hello.</h2>
-      <p class="intro"> I'm a Data Scientist. I have over 7 years of experience in construction industry. My professional experience includes assignments in project and program management,
+      <p class="intro"> I'm a Data Scientist. I have experience of working with vast data sets to break down information, gather relevant points and solve advanced business problems. My professional experience includes assignments in project and program management,
         project analysis, planning and end to end project delivery.</p>
       <img  src="Images\upload.jpg" width=90% height=auto>
     </div>
